TRABAJO_FINAL/Grupo_R/securevault/orquestacion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securevault
  labels:
    name: securevault
